optimized for deepseek r1, add support for markdown fix sime bugs

--- a/project/android/apps/MnnLlmApp/app/src/main/res/values/strings.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     <string name="recording_permission_denied">Please allow permission to record audio</string>
     <string name="release_to_send">Release to Send, Slide up to cancel</string>
     <string name="release_to_cancel">Release to cancel</string>
+    <string name="r1_thinking_message">Thinking…</string>
+    <string name="r1_think_complete_template">Has thought for ss seconds</string>
+    <string name="copy_text">Copy</string>
+    <string name="select_text">Select text</string>
+    <string name="copy_success">Copy success</string>
 </resources>
