support mmap menu

--- a/project/android/apps/MnnLlmApp/app/src/main/res/values/strings.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/values/strings.xml
@@ -55,4 +55,9 @@
     <string name="copy_success">Copy success</string>
     <string name="debug_message_copied">debug message copied, please report issue in github</string>
     <string name="use_model_scope_download">Use modelscope to download</string>
+    <string name="clear_mmap_cache">Clear mmap cache</string>
+    <string name="use_mmap">Use mmap</string>
+    <string name="mmap_cacche_cleared">mmap cache cleared, you need to restart the session</string>
+    <string name="mmap_not_used">mmap not used</string>
+    <string name="reloading_session">Reloading chat session</string>
 </resources>
