--- a/project/android/apps/MnnLlmApp/app/src/main/res/values-zh/strings.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/values-zh/strings.xml
@@ -55,4 +55,9 @@
     <string name="copy_success">复制成功</string>
     <string name="debug_message_copied">已经复制调试信息到粘贴板，请在github 上提交Issue</string>
     <string name="use_model_scope_download">使用 ModelScope 下载</string>
+    <string name="clear_mmap_cache">清理 mmap 缓存</string>
+    <string name="use_mmap">使用 mmap</string>
+    <string name="mmap_cacche_cleared">mmap cache 已经清理，需要重新进入聊天</string>
+    <string name="mmap_not_used">mmap 没有使用</string>
+    <string name="reloading_session">重新加载会话中…</string>
 </resources>
