update checker support chinese

--- a/project/android/apps/MnnLlmApp/app/src/main/res/values-zh/strings.xml
+++ b/project/android/apps/MnnLlmApp/app/src/main/res/values-zh/strings.xml
@@ -64,4 +64,6 @@
     <string name="check_for_update">检查更新</string>
     <string name="get_update_info_failed">获取更新信息失败</string>
     <string name="no_update">没有可用更新</string>
+    <string name="download">下载</string>
+    <string name="download_update_available">有新版本: (%1$s)</string>
 </resources>
