1. 优化编译静态库逻辑，支持编译mls为单独可执行文件。 2. 支持无 opencl设备安装 3. 支持过滤已下载模型。

--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -66,4 +66,5 @@
     <string name="no_update">没有可用更新</string>
     <string name="download">下载</string>
     <string name="download_update_available">有新版本: (%1$s)</string>
+    <string name="show_only_downloaded">只显示已下载模型</string>
 </resources>
