--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="no_update">No update available</string>
     <string name="download">Download</string>
     <string name="download_update_available">Update Available: (%1$s)</string>
+    <string name="show_only_downloaded">Show downloaded only</string>
 </resources>
