--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="diffusion_mode_memory_engough">Memory Engough Mode</string>
     <string name="diffusion_mode_memory_balance">Memory Balance Mode</string>
     <string name="diffusion_memory_mode">Diffusion Memory Mode</string>
+    <string name="model_settings">Settings</string>
 </resources>
