--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -86,4 +86,10 @@
     <string name="menu_item_benchmark_test">Benchmark测试</string>
     <string name="select_dataset">选择数据集</string>
     <string name="start_voice_chat">开启语音会话</string>
+    <string name="max_new_tokens">最大输出 token 数量</string>
+    <string name="system_prompt">System Prompt</string>
+    <string name="reset">重置</string>
+    <string name="settings_cancel">取消</string>
+    <string name="settings_done">完成</string>
+    <string name="max_new_tokens_hint">最大输出 token 数量</string>
 </resources>
