--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -86,4 +86,10 @@
     <string name="menu_item_benchmark_test">Benchmark</string>
     <string name="select_dataset">Select dataset</string>
     <string name="start_voice_chat">Start Voice Chat</string>
+    <string name="max_new_tokens">Max New Tokens</string>
+    <string name="system_prompt">System Prompt</string>
+    <string name="reset">Reset</string>
+    <string name="settings_cancel">Cancel</string>
+    <string name="settings_done">Done</string>
+    <string name="max_new_tokens_hint">max tokens to generate</string>
 </resources>
