--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -92,4 +92,5 @@
     <string name="settings_cancel">取消</string>
     <string name="settings_done">完成</string>
     <string name="max_new_tokens_hint">最大输出 token 数量</string>
+    <string name="thread_num">线程数</string>
 </resources>
