--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="settings_cancel">Cancel</string>
     <string name="settings_done">Done</string>
     <string name="max_new_tokens_hint">max tokens to generate</string>
+    <string name="thread_num">线程数</string>
 </resources>
