--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="diffusion_mode_memory_balance">Memory Balance Mode</string>
     <string name="diffusion_memory_mode">Diffusion Memory Mode</string>
     <string name="model_settings">Settings</string>
+    <string name="model_settings_title">Model Settings</string>
     <string name="menu_item_benchmark_test">Benchmark</string>
     <string name="select_dataset">Select dataset</string>
     <string name="start_voice_chat">Start Voice Chat</string>
