[feat] support change language

--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
@@ -466,6 +466,12 @@
     "关于 MNN" : {
 
     },
+    "切换语言" : {
+
+    },
+    "切换语言需要重启应用，是否继续？" : {
+
+    },
     "删除" : {
 
     },
@@ -491,6 +497,9 @@
 
     },
     "模型市场" : {
+
+    },
+    "确定" : {
 
     },
     "确认删除" : {
