[refactor] split model list sub views

--- a/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
+++ b/apps/iOS/MNNLLMChat/MNNLLMiOS/Util/Localizable.xcstrings
@@ -481,10 +481,19 @@
     "取消置顶" : {
 
     },
+    "完成" : {
+
+    },
     "已下载" : {
 
     },
     "应用" : {
+
+    },
+    "按厂商筛选" : {
+
+    },
+    "按标签筛选" : {
 
     },
     "是否确认删除该模型？" : {
@@ -496,10 +505,16 @@
     "模型市场" : {
 
     },
+    "清除" : {
+
+    },
     "确定" : {
 
     },
     "确认删除" : {
+
+    },
+    "筛选选项" : {
 
     },
     "置顶" : {
