--- a/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string name="main_describe">mnn-llm</string>
-    <string name="spinner_prompt">Select Model</string>
     <string name="model_loading">Model loading…</string>
     <string name="download_not_started">%1$s</string>
     <string name="downloaded_click_to_chat"> %1$s</string>
@@ -255,6 +254,9 @@
     <string name="download_state_failed">Download Failed</string>
     <string name="download_state_paused">Download Paused</string>
     <string name="no_models_found">No models available. Please download a model first.</string>
+    <string name="no_filtered_models_title">No models match your filters</string>
+    <string name="no_filtered_models_message">Try adjusting your filters to see more models, or clear all filters to see all available models.</string>
+    <string name="clear_filters">Clear Filters</string>
     <string name="diffusion_model_not_alloed">Sorry, diffusion model settings are not supported config here yet.</string>
     <string name="settings_section_general">GENERAL</string>
     <string name="settings_section_advanced">ADVANCED</string>
@@ -453,4 +455,5 @@
     <string name="max_memory">Max Memory</string>
     <string name="please_download_model">Please download a model first</string>
     <string name="go_to_download">Go to download</string>
+    <string name="all_filter">All Filters</string>
 </resources>
