--- a/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-zh/strings.xml
@@ -479,4 +479,6 @@
     <string name="debug_show_model_info">显示模型信息菜单</string>
     <string name="checking_repo_updates">检查仓库更新中...</string>
     <string name="repo_update_check_result">仓库更新检查</string>
+    <string name="allow_network_market_data">允许联网获取模型市场数据</string>
+    <string name="enable_network_delay">启用网络延时（3秒）</string>
 </resources>
